--- a/styles.css
+++ b/styles.css
@@ -89,14 +89,51 @@ h4{
 
 /* large tablets and Laptop styles */
 @media screen and (min-width:960px){
+
     body{
         font-size: 18px;
     }
+
 }
 
 /* Desktop */
 @media screen and (min-width:1200px){
+
     body{
         font-size: 20px;
     }
+
+}
+
+/* grid testing */
+
+.projects{
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 10px;
+}
+
+.projects img{
+    width: 100%;
+}
+
+.projects a{
+    text-align: center;
+    background: grey;
+    padding: 20px;
+}
+
+.projects a:nth-child(1){
+    grid-column: 2/6;
+    grid-row: 1;
+}
+
+.projects a:nth-child(2){
+    grid-column: 8/12;
+    grid-row: 1;
+}
+
+.projects a:nth-child(3){
+    grid-column: 5/9;
+    grid-row: 2;
 }
