--- a/styles.css
+++ b/styles.css
@@ -117,7 +117,30 @@ h4{
     margin: 20px 0;
 }
 
-
+#portfolio{
+    background: url(/assets/square_bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    padding: 30px 20px;
+}
+#portfolio h3{
+    text-align: center;
+    margin-bottom: 0;
+}
+.projects a{
+    grid-column: 1/9;
+    margin: 20px 0;
+    display: flex;
+}
+.projects a *{
+    margin: 0 20px;
+    max-width: 40%;
+    align-self: center;
+}
+.projects h4{
+    color: #9994f7;
+}
 
 /* small tablet styles */
 @media screen and (min-width:620px){
