--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,7 @@ footer{
     padding: 30px 20px;
     background-color: #14153D;
     background-image: url(/assets/footer_image.png);
-    background-size: 40%;
+    background-size: 30%;
     background-repeat: no-repeat;
     background-position: top center;
 }
@@ -206,12 +206,49 @@ footer li{
     margin: 0 6px;
 }
 footer img{
-    width: 20px
+    width: 20px;
 }
 
 /* small tablet styles */
 @media screen and (min-width:620px){
 
+    .welcome-text{
+        grid-column: 1/5;
+    }
+    .welcome-img{
+        grid-column: 5/9;
+    }
+    .welcome-img img{
+        width: 100%;
+    }
+
+    .projects{
+        margin-top: 40px;
+    }
+    .projects a{
+        grid-column: span 4;
+        display: block;
+        margin: 20px 0;
+    }
+    .projects a:last-child{
+        grid-column: 3/7;
+    }
+    .projects a *{
+        margin: 10px;
+        max-width: 60%;
+        margin: 10px 20%;
+    }
+    .projects h4{
+        text-align: center;
+    }
+
+    #skills{
+        padding: 30px 100px;
+    }
+
+    footer{
+        background-size: 20%;
+    }
 }
 
 /* large tablets and Laptop styles */
